GitOps/clusters/cyberhawk-talos-k8s/4-media/tracearr/11-timescaledb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timescaledb
spec:
  selector:
    app: timescaledb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
