GitOps/clusters/cyberhawk-talos-k8s/4-media/tracearr/21-valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
spec:
  selector:
    app: valkey
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
