GitOps/clusters/cyberhawk-talos-k8s/4-media/tracearr/32-tracearr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracearr
spec:
  selector:
    app: tracearr
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
