GitOps/clusters/cyberhawk-talos-k8s/4-media/tracearr/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracearr
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - tracearr.cyberhawk.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tracearr
          port: 3000
