GitOps/clusters/cyberhawk-talos-k8s/4-media/tracearr/50-networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tracearr
spec:
  endpointSelector:
    matchLabels:
      app: tracearr
  ingress:
    - fromEntities:
        - host
        - remote-node
        - ingress
  egress:
    - toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8181"
              protocol: TCP
            - port: "32400"
              protocol: TCP
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tracearr-timescaledb
spec:
  endpointSelector:
    matchLabels:
      app: timescaledb
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: tracearr
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tracearr-valkey
spec:
  endpointSelector:
    matchLabels:
      app: valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: tracearr
  egress: []
